Table users {
  id int [pk, increment]
  email varchar
  user_name varchar
  password varchar [not null]
  remember_me_token varchar
  updated_at timestamp
  created_at timestamp
  deleted_at timestamp
}

Table info {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  current_code varchar
  wallet decimal(12,2)
  updated_at timestamp
  created_at timestamp
  deleted_at timestamp
}

Table bills {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  status varchar
  current_code varchar
  payment_method varchar
  payment_email varchar
  payment_phone varchar
  payment_target varchar
  tax_cost decimal(8,2)
  vat_cost decimal(8,2)
  grandtotal decimal(8,2)
  buyer_note text
  updated_at timestamp
  created_at timestamp
  deleted_at timestamp
}

Table notifications {
  id int [pk, increment]
  notifiableId: int;
  status: varchar;
  title: varchar;
  message: varchar;
  data: varchar;
  readId: timestamp;
  userId: [ ref: > users.id];
}

Table  groups{
    id int [pk, increment]
    user_id int [not null, ref: > users.id]
    name varchar [not null]
    type varchar [not null]
    token varchar [not null]
    created_at timestamp
    updated_at timestamp
}

Table accounts {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  group_id int [not null, ref: > groups.id]
  name varchar [not null]
  browser_target_type varchar [not null]
  browser_target_id varchar
  expires_at timestamp
  created_at timestamp
}

Enum socialType{
  facebook,
  youtube
}

Table socials {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  account_id int [not null, ref: > accounts.id]
  email varchar
  user_name varchar
  password varchar
  type socialType [not null]
  expires_at timestamp
  created_at timestamp
}

Table categories {
  id int [pk, increment]
  name varchar
  slug varchar
  description varchar
  parentId [not null]
}

Table articles {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  social_id int [not null, ref: > socials.id]
  category_id int [ref: > categories.id]
  status varchar
  title varchar
  description varchar
  text varchar
}

Table article_urls {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  article_id int [not null, ref: > articles.id]
  url varchar [not null]
  thumb varchar
  type varchar
  size varchar
}

Table api_tokens {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  name varchar [not null]
  type varchar [not null]
  token varchar [not null]
  expires_at timestamp
  created_at timestamp
}